--- a/app.css
+++ b/app.css
@@ -4,11 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-    
-    
 }
-
 /*----------------------------- GLOBAL STYLES ----------------------------- */
 .all-code-container  {
     margin: 0 auto; 
@@ -16,28 +12,33 @@
 }
 
 body{
+    
     font-weight: 400;
     line-height: 1.5;
     background-color: #0E0E0E;   
+
+
 }
 
 h1,h2,h3,h4,h5{
-    font-weight: 600;
+    font-weight: 700;
     line-height: 1.2;
     letter-spacing: 0px;
     color: whitesmoke;
 }
 h1 {
     font-size: clamp(28px, 5vw, 62px); 
-    letter-spacing: -2px;
+    letter-spacing: -1.7px;
 }
 h2 {
+
     font-size: clamp(28px, 4vw, 48px);
     
     letter-spacing: -2px;
 }
 h3 {
     font-size: clamp(24px, 3.5vw, 40px);
+    
     letter-spacing: -2px;
 }
 
@@ -54,12 +55,12 @@ h5 {
 }
 
 p {
-    font-size: clamp(14px, 2vw, 20px);
+    font-size: clamp(12px, 2vw, 20px);
     color: whitesmoke;
 }
 
 a{
-    font-size: 16px;
+    font-size: clamp(8px, 2vw, 16px);
     text-decoration: none;
     display: inline-block;
     color: whitesmoke;
@@ -121,7 +122,32 @@ ul{
 
 
 
+.btns{
+    padding: 4px 10px;
+    background: linear-gradient(to right, #1F5EFF, #B986DD); 
+    border-radius: 18px;
+    transition: all 0.3s ease-in-out;
 
+}
+.btns:hover {
+    box-shadow: 0px 1px 5px rgba(31, 94, 255, 1); 
+    transform: scale(1.05);
+}
+.btnss{
+    padding: 4px 10px;
+    border: solid #0056b3 1px;
+    border-radius: 18px;
+    box-shadow: 0 0 10px 3px #0c2666;
+}
+
+.r{
+   
+    font-weight: 200; 
+    color: #cfcfcf; 
+
+    letter-spacing: 1px;
+    line-height: 1.3;
+}
 
 
 .scrollbtndiv{
@@ -164,6 +190,9 @@ ul{
 .NAVBR-SECTION{
     
     margin-bottom: 150px;
+    width: 100%;
+    border-bottom: 1px solid #A9A9A9	; /* خط سفلي */
+
 }  
 #menu-btn{
     display: none;
@@ -181,18 +210,22 @@ ul{
     position: relative;
     color: whitesmoke;
     font-size: 16px;
+    letter-spacing: 1px;
     padding-bottom: 5px;
+    font-weight: 600;
     transition: color 0.5s ease-in-out;
 }
 .links::after {
     content: "";
-    position: absolute;
+    position: absolute;    
+    font-size: 16px;
+    letter-spacing: 1px;
     left: 0%;
     bottom: 0;
     width: 0;
     height: 1px;
     background-color: #007bff; 
-    transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
+    transition: width 0.4s ease-in-out, left 0.4s ease-in-out;
 }
   
 .links:hover {
@@ -203,7 +236,6 @@ ul{
     width: 100%;
     left: 0;
 }
-
 
 
 
