--- a/app.css
+++ b/app.css
@@ -140,7 +140,7 @@ ul{
     box-shadow: 0 0 10px 3px #0c2666;
 }
 
-.r{
+.main-paragraph{
    
     font-weight: 200; 
     color: #cfcfcf; 
@@ -166,7 +166,7 @@ ul{
     z-index: 10000;
     box-shadow: 0 0 10px 2px #1F5EFF;
     background-color: #1F5EFF;
-    opacity: 0.8;
+    opacity: 0.7;
     border-radius: 20px;
 
 } 
@@ -191,7 +191,7 @@ ul{
     
     margin-bottom: 150px;
     width: 100%;
-    border-bottom: 1px solid #A9A9A9	; /* خط سفلي */
+    border-bottom: 1px solid #A9A9A9	;
 
 }  
 #menu-btn{
@@ -452,3 +452,81 @@ margin-top: 15px;
     background: #0056b3;
 }
 
+
+
+
+
+
+.con{
+    margin-top: 300px;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer-col{
+    width: 25%;
+    padding: 0 15px;
+}
+.footer-col h4{
+    font-size: 18px;
+    color: #ffffff;
+    text-transform: capitalize;
+    margin-bottom: 35px;
+    font-weight: 500;
+    position: relative;
+}
+.footer-col h4::before{
+    content: '';
+    position: absolute;
+    left:0;
+    bottom: -10px;
+    background-color: #e91e63;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+.footer-col ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbbbbb;
+    display: block;
+    transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+    color: #ffffff;
+    padding-left: 8px;
+}
+.footer-col .social-links a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255,255,255,0.2);
+    margin:0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+    color: #24262b;
+    background-color: #ffffff;
+}
+@media(max-width: 767px){
+    .footer-col{
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
+@media(max-width: 574px){
+    .footer-col{
+        width: 100%;
+    }
+}
