--- a/app.css
+++ b/app.css
@@ -169,14 +169,14 @@ ul{
 
 
 .feature-section-imgs{
-    max-width: 350px;
-
+    max-width: 300px;
+    border-radius: 25px;
     width: 100%;
     transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
-.feature-section-imgs:hover{
+/* .feature-section-imgs:hover{
     transform: scale(1.08);
-}
+} */
 
 .master-courses-imgs{
     max-width: 150px;
@@ -481,49 +481,13 @@ margin-top: 15px;
 /*-----FEATURES SECTION-----*/
 
 
-.FEATURE-SECTION{
+ .FEATURE-SECTION{
     margin-top: 300px;
-    margin-bottom: 300px;
+    margin-bottom: 900px;
 }
 
-
-.FEATURE-SECTION-container{
-    margin-top: 300px;
-    margin-bottom: 300px;
-    border: #e91e63 solid 2px;
-}
-.features-btn{
-    color: whitesmoke;
-}
-.tabs{
-    border: #B986DD solid 1px;
-    margin: 5px;
-    padding: 20px;
-    
-}
-.tab{
-
-    padding: 15px;
-}
-
-.feature-section-heading{
-    text-align: center;
-    margin-bottom: 150px;
-}
-.feature-grid-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 100px;
-
-
-}
-.feature-grid-item{
-    margin-bottom: 200px;
-    justify-items: center;
-    
-}
-.feature-grid-img{
-    text-align: end;
+ .feature-section-heading{
+    margin-bottom: 5px;
 }
 .feature-paragraph{
     font-weight: 200; 
@@ -532,16 +496,88 @@ margin-top: 15px;
     letter-spacing: 1px;
     line-height: 1.3;
 }
-@media(max-width: 750px){
-    .feature-grid-container{
-        grid-template-columns: 1fr;
-    }
+.feature-section-texts{
+    margin-bottom: 120px;
+}
+ .feature-section-container{
+    max-width: 1000px;
+
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    margin: auto;
+}
+.taps-container{
+    background-color: rgba(33, 37, 41, 0.3); 
+    border: whitesmoke 1px solid;
+    border-radius: 40px; 
 }
 
 
+.tab {
+    background: whitesmoke;
+    border: 1px whitesmoke solid;
+   
+    border-radius: 25px; 
+    padding: 10px 20px;
+    color: black;
+    margin: 5px;
+    cursor: pointer;
+    
+    transition: 0.3s;
+}
 
+.tab.active {
+   background-color: rgba(185, 134, 221, 0.7); 
+    color: white;
+}
 
+.content {
+    margin-top: 20px;
+}
 
+.tab-content {
+    display: none;
+}
+
+.tab-content.active {
+    display: block;
+}
+
+.features {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 15px;
+}
+
+.feature {
+    background: #e3f2fd;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.ch1{
+    order: -1; 
+}
+.ch2{
+    margin: 0 auto;
+}
+.feature-btns{
+    margin-top: 50px;
+    width: 200px;
+}
+@media (max-width:  585px) {
+    .containet {
+        flex-direction: column;
+  
+    }
+
+.taps-container{
+    flex-direction: column;
+}
+}
 
 
 
