--- a/styles/app.css
+++ b/styles/app.css
@@ -174,7 +174,7 @@ margin-top: 15px;
     border-radius: 10px;
     box-shadow: 0 0 20px 5px #0c2666;
     transform: scale(1.05);
- 
+    cursor: pointer;
 
 }
 
