--- a/styles/courses.css
+++ b/styles/courses.css
@@ -1,27 +1,26 @@
-.title {
-    text-align: center;
-    margin-top: 20px;
-}
-.subtitle {
-    text-align: center;
-    color: #bbb;
-}
+.NAVBR-SECTION{
+    margin-bottom: 40px;
+}  
 .container {
     display: flex;
     align-items: space-between;
-
 }
+
+
 .aside-line {
-    background-color: #A9A9A9;
+    background-color: #333333;
     height: 500px;
     width: 1px;
     margin-left: 20px; 
     margin-right: 20px; 
     align-self: center;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
 }
 .sidebar {
-    width: 250px;
-    padding: 20px;
+  
+
+
+    padding: 0px;
     border-radius: 10px;
 }
 .menu {
@@ -54,12 +53,16 @@
 }
 .courses-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
-    margin-left: 20px;
-    flex-grow: 1;
-
-    padding: 10px 20px;
+    padding: 100px;
+    margin: 0 auto;
+    height: 650PX;
+    width: 100%;
+    padding: 20px 40px;
+    overflow-y: auto;
+   
+    box-sizing: border-box;
 
 }
 .course-card {
@@ -70,17 +73,78 @@
     border-radius: 10px;
     box-shadow: 0 0 10px 3px #0c2666;
     transition: transform 0.5s ease, box-shadow 0.5s ease;
+    
 }
 .course-card:hover {
+    border: #0c2666 solid 2px;
+    justify-items: center;
+    background-color: rgba(33, 37, 41, 0.5); 
+    padding: 10px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 5px #0c2666;
     transform: scale(1.05);
-    box-shadow: 0 0 15px #0c2666;
+    
 }
-.course-img {
-    width: 80px;
-    height: 80px;
-    object-fit: contain;
-    margin-bottom: 10px;
+
+.courses-heading{
+    grid-column: span 3;
+    letter-spacing: 2px;
+    font-size: clamp(24px, 3.5vw, 38px);
+    font-weight: 300;
+    line-height: 1.5;
+
 }
-.course-info, .course-instructor {
-    color: #bbb;
+.courses-paragraph{
+    grid-column: span 3;
+    margin-left: 10px;
 }
+@media (max-width: 910px) {
+    .courses-heading{
+        grid-column: span 2;
+    }
+    .courses-grid {
+        grid-template-columns: 1fr 1fr;
+        padding: 100px;
+        gap: 20px;
+        margin: 0 auto;
+        padding: 20px 40px;
+    }
+ }
+
+ @media (max-width: 700px) {
+     .courses-heading{
+        grid-column: span 1;
+     }
+     .aside-line {
+        height: 0px;
+        width: 0px;
+        margin-left: 0px; 
+        margin-right: 0px; 
+    }
+    .logout{
+        display: none;
+    }
+    .menu{
+        display: flex;
+    }
+     .container{
+       flex-direction: column;
+     }
+     .courses-grid{
+        padding: 100px;
+        grid-template-columns: 1fr;
+              
+        display: grid;
+
+        gap: 20px;
+       margin: 0 auto;
+        
+        padding: 10px 20px;
+
+
+     }
+
+
+    
+ 
+ }
